Address PR: Use chat selectors for getting quickReply chat log
Address PR: Calculate height of slider dynamically

- Use the button line-height, padding, border-width and focusRingWidth to add up slider's height
- Remove direct margin from children but assign it from the parent level since children does not need to know about their siblings distance

Address PR: Minor fixes

- update comments
- use color variables
- update package-lock with npm 6.4.1

Address PR: change style naming

Address PR: Refactor when quickReplies is rendered

- selector `getQuickRepliesFromChatLog` will determine when the quickReply is rendered
- selector `getGroupedChatLog` will not care abt quickReply

--- a/src/component/chat/chatting/ChattingScreen.scss
+++ b/src/component/chat/chatting/ChattingScreen.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/_vars.scss';
 @import '../../../styles/mixins.scss';
+@import '../../shared/QuickReplies/QuickReplies.scss';
 
 .queuePosition {
   composes: u-textCenter from global;
@@ -102,7 +103,7 @@
 }
 
 .chatLogContainer {
-  min-height: calc(100% - 44px);
+  min-height: calc(100% - #{$sliderHeight});
 }
 
 .chatLogContainerMobile {
