Finalize ButtonCard styling
Following
https://zendesk.invisionapp.com/share/Q5LWZN62PTD#/screens/309104620 and
https://zendesk.invisionapp.com/share/Q3LWZN62PTD#/screens/306321486

--- a/src/component/shared/StructuredMessage/ButtonCard.scss
+++ b/src/component/shared/StructuredMessage/ButtonCard.scss
@@ -1,3 +1,8 @@
+@import '../../../styles/_vars.scss';
+
 .message {
-  background-color: #ccc;
+  composes: messageBubbleWithOptions from '../MessageBubble/MessageBubble.scss';
+
+  background-color: $zd-color-grey-200;
+  max-width: none;
 }
