Uses image dimensions from server to render gray box so there is no jumping when the image loads

--- a/src/component/chat/chatting/ImageMessage.scss
+++ b/src/component/chat/chatting/ImageMessage.scss
@@ -2,6 +2,8 @@
 
 .container {
   composes: u-inlineBlock from global;
+  background: $zd-color-grey-200;
+  border-radius: #{8/$font-size}rem;
 
   img {
     max-width: #{180/$font-size}rem;
