--- a/src/component/chat/chatting/ImageMessage.scss
+++ b/src/component/chat/chatting/ImageMessage.scss
@@ -3,20 +3,14 @@
 .container {
   composes: u-inlineBlock from global;
   background: $zd-color-grey-200;
+  border: #{1/$font-size}rem solid $zd-color-grey-300;
   border-radius: #{8/$font-size}rem;
-
-  img {
-    max-width: #{180/$font-size}rem;
-    max-height: #{180/$font-size}rem;
-    border: #{1/$font-size}rem solid $zd-color-grey-300;
-    border-radius: #{8/$font-size}rem;
-  }
+  background-position: center;
+  background-size: cover;
+  width: #{150/$font-size}rem;
+  height: #{113/$font-size}rem;
 }
 
 .link {
   composes: u-linkClean from global;
-}
-
-.hidden {
-  composes: u-isHidden from global;
 }
