Adds spinner when loading agent's image

--- a/src/component/chat/chatting/ImageMessage.scss
+++ b/src/component/chat/chatting/ImageMessage.scss
@@ -1,7 +1,10 @@
 @import '../../../styles/_vars.scss';
 
 .container {
-  composes: u-inlineBlock from global;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: $zd-color-grey-200;
   border: #{1/$font-size}rem solid $zd-color-grey-300;
   border-radius: #{8/$font-size}rem;
@@ -13,4 +16,18 @@
 
 .link {
   composes: u-linkClean from global;
+}
+
+.spinner {
+  height: #{28/$font-size}rem;
+  width: #{28/$font-size}rem;
+  animation: rotate 0.8s infinite linear;
+  border: #{3/$font-size}rem solid $zd-color-grey-500;
+  border-right-color: transparent;
+  border-radius: 50%;
+}
+
+@keyframes rotate {
+  0%    { transform: rotate(0deg); }
+  100%  { transform: rotate(360deg); }
 }
