Card component should fill up 90% in mobile mode

--- a/src/component/shared/StructuredMessage/ButtonCard.scss
+++ b/src/component/shared/StructuredMessage/ButtonCard.scss
@@ -4,6 +4,6 @@
   composes: messageBubbleWithOptions from '../MessageBubble/MessageBubble.scss';
 
   background-color: $zd-color-grey-200;
-  max-width: none;
+  max-width: none !important;
   width: 100%;
 }
