Remove hover, focus, active state for ButtonList, Button in mobile

--- a/src/component/shared/StructuredMessage/pure/Button.scss
+++ b/src/component/shared/StructuredMessage/pure/Button.scss
@@ -14,3 +14,10 @@
     text-decoration: underline;
   }
 }
+
+.overwriteState {
+  &:hover, &:active, &:focus {
+    background-color: transparent !important;
+    text-decoration: none;
+  }
+}
