--- a/src/component/chat/ChatNotificationPopup.scss
+++ b/src/component/chat/ChatNotificationPopup.scss
@@ -15,7 +15,7 @@
 
 .proactiveNotificationMobile {
   border-radius: 0;
-  bottom: #{18/$font-size}rem !important;
+  margin-bottom: #{14/$font-size}rem !important;
 }
 
 .ongoingNotificationMobile {
