Remove margin where there is not chat scroll header

--- a/src/component/chat/chatting/ChattingScreen.scss
+++ b/src/component/chat/chatting/ChattingScreen.scss
@@ -122,9 +122,12 @@
   padding-left: #{8/$font-size}rem !important;
 }
 
+.headerMargin {
+  margin-top: #{58/$font-size}rem;
+}
+
 .scrollContainerMessagesContent {
   composes: scrollContainerContent;
-  margin-top: #{58/$font-size}rem;
 }
 
 .scrollContainerMessagesContentDesktop {
