Add messenger and twitter icons

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -56,3 +56,5 @@ $chat-header-zindex: 3;
 // Icon colors
 $facebook-blue: #3B5998;
 $google-plus-red: #d34836;
+$messenger-blue: #0084FF;
+$twitter-blue: #1DA1F2;
