Set anchor tag to display: inline-block, reset padding-right for RTL

--- a/src/component/chat/ChatMessagingChannels.scss
+++ b/src/component/chat/ChatMessagingChannels.scss
@@ -5,17 +5,21 @@
 }
 
 .channelIcon {
+  display: inline-block;
   padding-right: #{8 / $font-size}rem;
 
   [dir="rtl"] & {
+    padding-right: 0;
     padding-left: #{8 / $font-size}rem;
   }
 }
 
 .channelIconMobile {
+  display: inline-block;
   padding-right: #{12 / $font-size}rem;
 
   [dir="rtl"] & {
+    padding-right: 0;
     padding-left: #{12 / $font-size}rem;
   }
 }
