--- a/src/component/chat/prechat/PrechatScreen.scss
+++ b/src/component/chat/prechat/PrechatScreen.scss
@@ -3,6 +3,7 @@
 .scrollContainerContent {
   height: 100%;
   max-height: none;
+  width: 100%;
   margin-right: #{7/$font-size}rem !important;
   margin-left: #{7/$font-size}rem !important;
   padding-right: #{8/$font-size}rem !important;
