--- a/src/component/frame/Navigation.scss
+++ b/src/component/frame/Navigation.scss
@@ -6,6 +6,6 @@
 }
 
 .popout {
-  transform: rotate(135deg);
-  margin-right: #{36/$font-size}rem !important;
+  margin-top: #{12/$font-size}rem !important;
+  margin-right: #{40/$font-size}rem !important;
 }
