--- a/src/component/launcher/ChatBadge.scss
+++ b/src/component/launcher/ChatBadge.scss
@@ -19,6 +19,7 @@
   text-overflow: ellipsis;
   font-size: #{16/$font-size}rem;
   font-family: Verdana, Geneva, sans-serif;
+  padding: #{10/$font-size}rem 0 !important;
 }
 
 .textOnLeft {
@@ -28,7 +29,7 @@
 
 .textOnRight {
   padding-left: #{4/$font-size}rem;
-  padding-right: #{8/$font-size}rem;
+  padding-right: #{6/$font-size}rem;
 }
 
 .textOnly {
@@ -37,7 +38,6 @@
 }
 
 .imageContainer {
-  padding-top: #{24/$font-size}rem;
   vertical-align: middle;
   text-align: center;
   width: #{100/$font-size}rem;
@@ -82,7 +82,7 @@
   height: #{40/$font-size}rem;
   border-bottom-left-radius: #{8/$font-size}rem;
   border-bottom-right-radius: #{8/$font-size}rem;
-  border-top: #{1/$font-size}rem $zd-color-grey-500 solid;
+  border-top: #{1/$font-size}rem $zd-color-grey-300 solid;
 }
 
 .input {
@@ -191,6 +191,8 @@
   // pad left a tad because centred looks a bit off
   // humans and their perception quirks!
   padding-left: #{8/$font-size}rem;
+  margin-top: #{24/$font-size}rem;
+
 }
 
 .imgRight {
