remove important declaration

--- a/src/component/launcher/ChatBadge.scss
+++ b/src/component/launcher/ChatBadge.scss
@@ -19,7 +19,7 @@
   text-overflow: ellipsis;
   font-size: #{16/$font-size}rem;
   font-family: Verdana, Geneva, sans-serif;
-  padding: #{10/$font-size}rem 0 !important;
+  padding: #{10/$font-size}rem 0;
 }
 
 .textOnLeft {
