--- a/src/component/frame/Navigation.scss
+++ b/src/component/frame/Navigation.scss
@@ -7,5 +7,12 @@
 
 .popout {
   margin-top: #{12/$font-size}rem !important;
-  margin-right: #{40/$font-size}rem !important;
+
+  [dir='rtl'] & {
+    margin-left: #{40/$font-size}rem !important;
+  }
+
+  [dir='ltr'] & {
+    margin-right: #{40/$font-size}rem !important;
+  }
 }
