Carry over machine id from chat session to popout

--- a/src/asset/templates/liveChat.html
+++ b/src/asset/templates/liveChat.html
@@ -47,6 +47,13 @@
       }
     }
     var queryParams = parseQueryParams(window.location.search);
+
+    if (queryParams.mid) {
+      document.cookie = '__zlcpomid=' + queryParams.mid;
+      window.location.href = (window.location.href || '').replace(/([?&])mid=[^&#]+/, '$1');
+      return;
+    }
+
     window.zESettings = parseSettings(queryParams);
 
     loadSnippet(queryParams);
