--- a/dev/templates/web_widget/liveChat.html
+++ b/dev/templates/web_widget/liveChat.html
@@ -7,7 +7,7 @@
 <body>
   <h1>HELLO FREN</h1>
   <%= htmlWebpackPlugin.options.snippet %>
-  <script type='text/javascript'>
+  <script type="text/javascript" nonce="<%= htmlWebpackPlugin.options.nonce %>">
     var parseQueryParams = function (inputString) {
       var params = {},
         queries;
