Do not use es6 arrow functions for popout

--- a/src/asset/templates/liveChat.html
+++ b/src/asset/templates/liveChat.html
@@ -12,7 +12,7 @@
       inputString = inputString.substring(inputString.indexOf('?') + 1);
       queries = inputString.split('&');
 
-      queries.forEach(element => {
+      queries.forEach(function(element) {
         var splitElement = element.split('=');
 
         if (splitElement.length > 1) {
