--- a/dev/templates/web_widget/liveChat.html
+++ b/dev/templates/web_widget/liveChat.html
@@ -15,7 +15,7 @@
       inputString = inputString.substring(inputString.indexOf('?') + 1);
       queries = inputString.split('&');
 
-      queries.forEach(element => {
+      queries.forEach(function(element) {
         var splitElement = element.split('=');
 
         if (splitElement.length > 1) {
@@ -41,8 +41,5 @@
 
     loadSnippet(queryParams);
   </script>
-
-<script nonce="<%= htmlWebpackPlugin.options.nonce %>">
-</script>
 </body>
 </html>
