Refactor the shared variables into shraed file

--- a/src/component/chat/chatting/structuredMessage/PanelCard.scss
+++ b/src/component/chat/chatting/structuredMessage/PanelCard.scss
@@ -5,5 +5,5 @@
 }
 
 .mobileInCarousel {
-  width: calc(100% - #{12/$font-size}rem);
+  width: calc(100% - #{$structure-msg-card-margin/$font-size}rem);
 }
