--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -58,3 +58,7 @@ $facebook-blue: #3B5998;
 $google-plus-red: #d34836;
 $messenger-blue: #0084FF;
 $twitter-blue: #1DA1F2;
+
+// Structured Message
+$structure-msg-card-width: 240;
+$structure-msg-card-margin: 12;
